--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1> MUSICAL INSTRUMENTS </h1>
-			<img src = "FullSizeRender.jpg" width= 1350 height = 200 alt = "Clip Art of Different Little Drawings of Instruments" />
+			<p class = "Photo"><img src = "FullSizeRender.jpg" width = 1350 height = 200 alt = "Clip Art of Different Little Drawings of Instruments" />
 			<p> <a href = "#Introduction"> Introduction</a> </p>
 			<p> <a href = "#Different_Types_Of_Instrument_Families"> Different Types Of Instrument Families</a> </p>
 			<p> <a href = "#Why_Do_People_Enjoy_Playing_Musical_Instruments?"> Why Do People Enjoy Playing Musical Instruments?</a> </p>
@@ -68,7 +68,7 @@
 				<h3> Entertainment </h3> 
 					<p> People may entertain other individuals to give them satisfaction, to just hear them play may brighten up their day. Musical instruments are also a great way to express how you are feeling, as there are many different genres of music in the world, and they all possess different feelings and emotions that an individual may perform on an instrument.
 				<h3> As A Career </h3>
-					<p> Lots of people pursue careers playing musical instruments. For example, people have <a href = "https://www.careersinmusic.com"> professions</a> such as performing in a <a href = "https://en.wikipedia.org/wiki/Musical_ensemble"> musical ensemble</a>, or as a teacher teaching a specific instrument. These jobs require proper training and education, but if you have a strong passion for this, nothing is stopping you! </p>
+					<p> Lots of people pursue careers playing musical instruments. For example, people have <a href = "https://www.careersinmusic.com"> professions</a> such as performing in a <a href = "https://en.wikipedia.org/wiki/Musical_ensemble"> musical ensemble</a>, or as a teacher teaching a specific instrument. These jobs require proper training and education, but if you have a strong passion for this, nothing is stopping you. </p>
 			<h2 id = "Conclusion"</h2>
 			<h2> Conclusion </h2>
 				<p> Musical instruments have had a big impact on the world today, as many people enjoy these products as forms of satisfaction. </p>
@@ -76,3 +76,4 @@
 			<p>
 				<a href = "#Top"> RETURN TO TOP</a>
 			</p>
+</html>
