--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title> Musical Instruments </title>
-		<link rel = "stylesheet" type = "text/css" href = "musical.css"/>
+		<link rel = "stylesheet" type = "text/css" href = "index.css"/>
 		<meta charset="UTF-8">
 	</head>
 	<body>
 		<h1> MUSICAL INSTRUMENTS </h1>
-			<p class = "Photo"><img src = "FullSizeRender.jpg" width = 1350 height = 200 alt = "Clip Art of Different Little Drawings of Instruments" />
+			<img src = "FullSizeRender.jpg" width= 1350 height = 200 alt = "Clip Art of Different Little Drawings of Instruments" />
 			<p> <a href = "#Introduction"> Introduction</a> </p>
 			<p> <a href = "#Different_Types_Of_Instrument_Families"> Different Types Of Instrument Families</a> </p>
 			<p> <a href = "#Why_Do_People_Enjoy_Playing_Musical_Instruments?"> Why Do People Enjoy Playing Musical Instruments?</a> </p>
