--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	</head>
 	<body>
 		<h1> MUSICAL INSTRUMENTS </h1>
-			<img src = "FullSizeRender.jpg" width= 1350 height = 200 alt = "Clip Art of Different Little Drawings of Instruments" />
-			<p> <a href = "#Introduction"> Introduction</a> </p>
-			<p> <a href = "#Different_Types_Of_Instrument_Families"> Different Types Of Instrument Families</a> </p>
-			<p> <a href = "#Why_Do_People_Enjoy_Playing_Musical_Instruments?"> Why Do People Enjoy Playing Musical Instruments?</a> </p>
-			<p> <a href = "#Conclusion"> Conclusion</a> <p>
+			<img src = "FullSizeRender.jpg" width = 1250 height = 170 alt = "Clip Art of Different Little Drawings of Instruments" />
+			<p class="center"> <a href = "#Introduction"> Introduction</a> </p>
+			<p class="center"> <a href = "#Different_Types_Of_Instrument_Families"> Different Types Of Instrument Families</a> </p>
+			<p class="center"> <a href = "#Why_Do_People_Enjoy_Playing_Musical_Instruments?"> Why Do People Enjoy Playing Musical Instruments?</a> </p>
+			<p class="center"> <a href = "#Conclusion"> Conclusion</a> <p>
 			<h2 id ="Introduction"></h2>
 			<h2> Introduction </h2>
 				<p> Musical instruments go back as 40,000 years ago, when the first flute was invented. In today's world, musical instruments are heard almost everywhere. Millions of people own and practice an instrument every day, and many simply just adore music. These instrumental objects are adored by many, each used for various reasons. In reality, any object that produces any sort of sound or vibration can be considered as a musical instrument! That also includes clapping, snapping, tapping, and singing. </p>
