--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
 			<h2 id = "Conclusion"</h2>
 			<h2> Conclusion </h2>
 				<p> Musical instruments have had a big impact on the world today, as many people enjoy these products as forms of satisfaction. </p>
-	</body>	
 			<p>
 				<a href = "#Top"> RETURN TO TOP</a>
 			</p>
+            <a href="http://validator.w3.org/check?uri=https://kerasl.github.io/home/ ">
+<img src=" html5.jpg" width="165" height="64" alt="HTML5 with CSS3 and Semantics">
+</a>
+	</body>            
 </html>
