--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<h2 id ="Why_Do_People_Enjoy_Playing_Musical_Instruments?"</h2>
 			<h2> Why Do People Enjoy Playing Musical Instruments? </h2>
 				<h3> Relaxation </h3>
-					<p> To alter someone's mood, people may enjoy playing musical instruments as a form of relaxation. Why, must you ask? The relaxing, soothing sound of an instrument may bring happiness to your ears, reducing levels of <a href = "https://en.wikipedia.org/wiki/Pain" pain</a>, <a href = "https://en.wikipedia.org/wiki/Anxiety"anxiety</a>, <a href = "https://en.wikipedia.org/wiki/Psychological_stress"stress</a> or <a href = "https://en.wikipedia.org/wiki/Anger"anger</a>. </p>
+					<p> To alter someone's mood, people may enjoy playing musical instruments as a form of relaxation. Why, must you ask? The relaxing, soothing sound of an instrument may bring happiness to your ears, reducing levels of <a href = "https://en.wikipedia.org/wiki/Pain"> pain</a>, <a href = "https://en.wikipedia.org/wiki/Anxiety"> anxiety</a>, <a href = "https://en.wikipedia.org/wiki/Psychological_stress"> stress</a> or <a href = "https://en.wikipedia.org/wiki/Anger"> anger</a>. </p>
 				<h3> Entertainment </h3> 
 					<p> People may entertain other individuals to give them satisfaction, to just hear them play may brighten up their day. Musical instruments are also a great way to express how you are feeling, as there are many different genres of music in the world, and they all possess different feelings and emotions that an individual may perform on an instrument.
 				<h3> As A Career </h3>
