--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
 	</head>
 	<body>
 		<h1> MUSICAL INSTRUMENTS </h1>
-			<img src = "FullSizeRender.jpg" width = "1250" height = "170" alt = "Clip Art of Different Little Drawings of Instruments" />
+			<img class = "image" src = "FullSizeRender.jpg" width = "1250" height = "170" alt = "Clip Art of Different Little Drawings of Instruments" />
 			<p class = "center"> <a href = "#Introduction"> Introduction</a> </p>
 			<p class = "center"> <a href = "#Different_Types_Of_Instrument_Families"> Different Types Of Instrument Families</a> </p>
 			<p class = "center"> <a href = "#Why_Do_People_Enjoy_Playing_Musical_Instruments?"> Why Do People Enjoy Playing Musical Instruments?</a> </p>
 			<p class = "center"> <a href = "#Conclusion"> Conclusion</a> <p>
-			<img src = "musicart.png" width = "210" height = "125" alt = "Music Staff with Various Music Notes and A Treble Clef" />
+			<img class = "image" src = "musicart.png" width = "210" height = "125" alt = "Music Staff with Various Music Notes and A Treble Clef" />
 			<h2 id = "Introduction"> Introduction </h2>
 				<p> Musical instruments go back as 40,000 years ago, when the <a href = "https://www.livescience.com/20563-ancient-bone-flute.html"> first flute</a> was invented. In today's world, musical instruments are heard almost everywhere. Millions of people own and practice an instrument every day, and many simply just adore music. These instrumental objects are adored by many, each used for various reasons. In reality, any object that produces any sort of sound or vibration can be considered as a musical instrument! That also includes <a href = "https://en.wikipedia.org/wiki/Clapping"> clapping</a>, <a href = "https://en.wikipedia.org/wiki/Finger_snapping"> snapping</a>, <a href = "https://en.wikipedia.org/wiki/Tap_dance"> tapping</a>, and <a href = "https://en.wikipedia.org/wiki/Singing"> singing</a>. On this webpage, you will read and learn about the different instruments and their families, why people enjoy playing them, and so much more. </p>
 			<h2 id = "Different_Types_Of_Instrument_Families"> Different Types Of Instrument Families </h2>
 				<p> Here are some examples of different types of instrument families, provided with a <a href = "https://en.wikipedia.org/wiki/Main_Page"> Wikipedia</a> link on the specific instrument to find out more information if interested. An instrument is classified into a family, based on the way that they sound and the way they produce <a href = "https://en.wikipedia.org/wiki/Musical_acoustics"> vibration</a>. There are 4 different big instrument families: <a href = "https://en.wikipedia.org/wiki/Woodwind_instrument"> woodwind</a>, <a href = "https://en.wikipedia.org/wiki/String_instrument"> string</a>, <a href = "https://en.wikipedia.org/wiki/Brass_instrument"> brass</a>, and <a href = "https://en.wikipedia.org/wiki/Percussion_instrument"> percussion</a>. Every instrument sounds different and has their own unique sound to them. Only the most common and popular instruments will be mentioned, as there are hundreds of instruments in the world. </p>
+				<img src = "multiple.png" width = "300" height = "290" alt = "Variable Musical Instruments" />
 				<h3 class = "list"> WOODWIND </h3>
 					<ul> 
 						<li> <a href = "https://en.wikipedia.org/wiki/Flute"> Flute </a> </li>
@@ -59,9 +60,9 @@
 					</ul>
 			<h2 id ="Why_Do_People_Enjoy_Playing_Musical_Instruments?"> Why Do People Enjoy Playing Musical Instruments? </h2>
 				<h3> Relaxation </h3>
-					<p> To alter someone's mood, people may enjoy playing musical instruments as a form of relaxation. Why, must you ask? The relaxing, soothing sound of an instrument may bring happiness to your ears, reducing levels of <a href = "https://en.wikipedia.org/wiki/Pain"> pain</a>, <a href = "https://en.wikipedia.org/wiki/Anxiety"> anxiety</a>, <a href = "https://en.wikipedia.org/wiki/Psychological_stress"> stress</a> or <a href = "https://en.wikipedia.org/wiki/Anger"> anger</a>. Everyone loves the sound of music from a man-made instrument to wind down their day and talk about happiness. </p>
+					<p> To alter someone's mood, people may enjoy playing musical instruments as a form of relaxation. Why, must you ask? The relaxing, soothing sound of an instrument may bring happiness to your ears, reducing levels of <a href = "https://en.wikipedia.org/wiki/Pain"> pain</a>, <a href = "https://en.wikipedia.org/wiki/Anxiety"> anxiety</a>, <a href = "https://en.wikipedia.org/wiki/Psychological_stress"> stress</a> or <a href = "https://en.wikipedia.org/wiki/Anger"> anger</a>. According to some individuals, the sound of music is equally comparable to the sound of a nice violin, being gently played by a bow with very gentle chords and notes. Everyone loves the sound of music from a man-made instrument to wind down their day and talk about happiness. </p>
 				<h3> Entertainment </h3> 
-					<p> People may entertain other individuals to give them satisfaction, to just hear them play may brighten up their day. Musical instruments are also a great way to express how you are feeling, as there are many different genres of music in the world, and they all possess different feelings and emotions that an individual may perform on an instrument. Sometimes, when you're at your lowest, music can cheer you up. It motivates you to push through it and keep on going. </p>
+					<p> People may entertain other individuals to give them satisfaction, to just hear them play may brighten up their day. The entertainment industry is open for a wide range of musicians, for the ones who want to play music to please others. The world needs more creative and amazing musicians. Musical instruments are also a great way to express how you are feeling, as there are many different genres of music in the world, and they all possess different feelings and emotions that an individual may perform on an instrument. Sometimes, when you're at your lowest, music can cheer you up. It motivates you to push through it and keep on going. </p>
 				<h3> As A Career </h3>
 					<p> Lots of people pursue <a href = "https://www.theartcareerproject.com/careers/music/"> careers</a> playing musical instruments. For example, people have <a href = "https://www.careersinmusic.com"> professions</a> from performing in a <a href = "https://en.wikipedia.org/wiki/Musical_ensemble"> musical ensemble</a>, to working with a choir. People may also work in the music industry composing musical scores and compositions for musical ensembles  The life of a musician may be challenging at first to get noticed by upper-class people, but once you get out there and start performing and making connections with other people like you, you'll start to build a foundation. This may include playing a musical instrument, or even singing. Musicians can utilize their skills to create amazing sounds as a work of art. By using their skills with instruments and their voices, a musician creates a lasting impression that captivates and inspires the audience. Although these jobs / professions require proper training and education, if you put your mind to it and have a strong passion for this area, nothing is stopping you. You WILL succeed. That's guaranteed. </p>
 			<h2 id = "Conclusion"> Conclusion </h2>
@@ -70,7 +71,7 @@
 				<a href = "#Top"> RETURN TO TOP</a>
 			</p>
             <a href="http://validator.w3.org/check?uri=https://liacosd.github.io/home/ ">
-<img src=" html5.jpg" width="165" height="64" alt="HTML5 with CSS3 and Semantics">
+		<img class = "image" src = "html5.jpg" width = "165" height = "64" alt= "HTML5 Icon with CSS3 and Semantics" />
 </a>
 	</body>            
 </html>
