--- a/2index.html
+++ b/2index.html
@@ -6,8 +6,29 @@
 		<meta charset = "UTF-8">
 	</head>
 	<body>
-		<h1 class = "Music"> CAREERS IN MUSIC <h1>
+		<h1> CAREERS IN MUSIC <h1>
+            <img class = "career" src = "career.jpg" width: "475" height = "290" alt = "Google Sites Image of Different Opportunities for Pursuing A Career In Music, Scattered" />
 			<h2> Introduction </h2> 
 				<p> As many of you already know, millions of people play musical instruments all around the world, and many of them pursue careers in that category. There are several options available for pursing a career in music, one of the biggest would be a music teacher. Whether that is conducting an orchestra or teaching a specific instrument, all of these jobs involve music knowledge. </p> 
+            <h2> The Different Opportunities </h2>
+                <p> The different opportunities and choices you have in pursing music as a career are endless; from teaching a specific instrument to performing in a musical ensemble. Everyone just thinks that music is just hitting a key on a piano, but no; it&rsquo;s SO much more than that. </p>
+                <h3> AS A TEACHER </h3>
+                    <h4> Teaching A Specific Instrument </h4>
+                        <p> Teaching a specific instrument to a student, friend, or family member is one of the most popular careers in the music industry. You may have students on a weekly basis have you as a teacher, for example; piano lessons. They will come back every week afer practicing their assigned music pieces, and will gradually get better as they go along. </p>
+                    <h4> Working with a Music Ensemble </h4>
+                        <p> There are several different musical ensembles to work with, if you may want to become the manager or conductor of a band, then knowing all the different types of musical ensembles is crucial to be aware of the different instruments you will have to work with. Here are some examples of a few: </p>
+                        <ul>
+                            <li> <a href = "https://en.wikipedia.org/wiki/Concert_band"> Concert Band</a> </li>
+                            <li> <a href = "https://en.wikipedia.org/wiki/Orchestra"> Orchestra</a> </li>
+                            <li> <a href = "https://en.wikipedia.org/wiki/String_orchestra"> String Orchestra</a> </li>
+                            <li> <a href = "https://en.wikipedia.org/wiki/Choir"> Choir</a> </li>
+                        </ul>
+                <h3> AS A PERFORMER </h3>
+                    <p> Performing is obviously the most crucial element in the entertainment industry, with a big chunk of performances involving music and their instruments. For example, all the musicians in the Toronto Symphony Orchestra are all performers! This is their job, and they love what they do. It&rsquo;s just amazing to wake up every day to know that your job is a performer in front of thousands of people; doing what you love. </p>
+                <h3> AS A COMPOSER </h3>
+                    <p> People may also work in the music industry composing musical scores and compositions for musical ensembles, comparable to the classic music composers, such as Mozart or Beethoven. They compose many different types of works in many different genres of music. They write music for players to perform in front of audiences. If you have a very creative mindset in music, and can constantly imagine amazing tunes in your head, then this may be the option for you! If you&rsquo;ve ever listened to one of Mozart&rsquo;s or Beethoven&rsquo;s intricate compositions, you&rsquo;ll be stunned at every single note played. Every single note is so beautiful, so in harmony, it&rsquo;s just outstanding. </p>
+            <h2> Conclusion </h2>
+                <p> In conclusion, if you want to pursue music as a career in any sort, go for it! The life of a musician may be challenging at first, for example; as a performer, to get noticed by upper-class people, but once you get out there and start performing and making connections with other people like you, you&rsquo;ll start to build a foundation. This may include playing a musical instrument, or even singing. Musicians can utilize their skills to create amazing sounds as a work of art. By using their skills with instruments and their voices, a musician creates a lasting impression that captivates and inspires the audience. Although these jobs / professions require proper training and education, if you put your mind to it and have a strong passion for this area, nothing is stopping you. You WILL succeed. That&rsquo;s guaranteed. </p>
+			<p class = "return"> <a href = "#Top"> RETURN TO TOP</a> </p>
 	</body>
 </html>
