--- a/index.html
+++ b/index.html
@@ -7,70 +7,70 @@
 	</head>
 	<body>
 		<h1> MUSICAL INSTRUMENTS </h1>
-			<img class = "images" src = "FullSizeRender.jpg" width = "1250" height = "170" alt = "Clip Art of Different Little Drawings of Instruments" />
+			<img id = "#images" src = "FullSizeRender.jpg" width = "1250" height = "170" alt = "Clip Art of Different Little Drawings of Instruments" />
 			<p class = "center"> <a href = "#Introduction"> Introduction</a> </p>
 			<p class = "center"> <a href = "#Different_Types_Of_Instrument_Families"> Different Types Of Instrument Families</a> </p>
 			<p class = "center"> <a href = "#Why_Do_People_Enjoy_Playing_Musical_Instruments?"> Why Do People Enjoy Playing Musical Instruments?</a> </p>
 			<p class = "center"> <a href = "#Conclusion"> Conclusion</a> <p>
 			<img class = "image" src = "musicart.png" width = "250" height = "155" alt = "Music Staff with Various Music Notes and A Treble Clef" />
 			<h2 id = "Introduction"> Introduction </h2>
-				<p> Musical instruments go back as 40,000 years ago, when the <a href = "https://www.livescience.com/20563-ancient-bone-flute.html"> first flute</a> was invented. In today&rsquo;s world, musical instruments are heard almost everywhere. Millions of people own and practice an instrument every day, and many simply just adore music. These instrumental objects are adored by many, each used for various reasons. In reality, any object that produces any sort of sound or vibration can be considered as a musical instrument! That also includes <a href = "https://en.wikipedia.org/wiki/Clapping"> clapping</a>, <a href = "https://en.wikipedia.org/wiki/Finger_snapping"> snapping</a>, <a href = "https://en.wikipedia.org/wiki/Tap_dance"> tapping</a>, and <a href = "https://en.wikipedia.org/wiki/Singing"> singing</a>. On this webpage, you will read and learn about the different instruments and their families, why people enjoy playing them, and so much more. </p>
+				<p> Musical instruments go back as 40,000 years ago, when the <a href = "https://www.livescience.com/20563-ancient-bone-flute.html"> first flute</a> was invented. In today&rsquo;s world, musical instruments are heard almost everywhere. Millions of people own and practice an instrument every day, and many simply just adore music. Many adore these instrumental objects, each used for various reasons. In reality, any object that produces any sort of sound or vibration can be considered as a musical instrument! That also includes <a href = "https://en.wikipedia.org/wiki/Clapping"> clapping</a>, <a href = "https://en.wikipedia.org/wiki/Finger_snapping"> snapping</a>, <a href = "https://en.wikipedia.org/wiki/Tap_dance"> tapping</a>, and <a href = "https://en.wikipedia.org/wiki/Singing"> singing</a>. On this webpage, you will read and learn about the different instruments and their families, why people enjoy playing them, and so much more. </p>
 			<h2 id = "Different_Types_Of_Instrument_Families"> Different Types Of Instrument Families </h2>
-				<p> Here are some examples of different types of instrument families, provided with a <a href = "https://en.wikipedia.org/wiki/Main_Page"> Wikipedia</a> link on the specific instrument to find out more information if interested. An instrument is classified into a &quot;family&quot;, based on the way that it sounds and the way it produces <a href = "https://en.wikipedia.org/wiki/Musical_acoustics"> vibration</a>. There are 4 different big instrument families: <a href = "https://en.wikipedia.org/wiki/Woodwind_instrument"> woodwind</a>, <a href = "https://en.wikipedia.org/wiki/String_instrument"> string</a>, <a href = "https://en.wikipedia.org/wiki/Brass_instrument"> brass</a>, and <a href = "https://en.wikipedia.org/wiki/Percussion_instrument"> percussion</a>. Many of these instruments in the same family may be slightly modified for each instrument (example: First Violin, Second Violin, viola, etc). Every instrument sounds different and has their own unique sound to it. Only the most common and popular instruments will be mentioned, as there are hundreds of instruments in the world. </p>
-				<img src = "multiple.png" width = "300" height = "290" alt = "Variable Musical Instruments" />
+				<p> Here are some examples of different types of instrument families, provided with a <a href = "https://en.wikipedia.org/wiki/Main_Page"> Wikipedia</a> link on the specific instrument to find out more information if interested. An instrument is classified into a &quot;family&quot;, based on the way that it sounds and the way it produces <a href = "https://en.wikipedia.org/wiki/Musical_acoustics"> vibration</a>. There are 4 different big instrument families: <a href = "https://en.wikipedia.org/wiki/Woodwind_instrument"> woodwind</a>, <a href = "https://en.wikipedia.org/wiki/String_instrument"> string</a>, <a href = "https://en.wikipedia.org/wiki/Brass_instrument"> brass</a>, and <a href = "https://en.wikipedia.org/wiki/Percussion_instrument"> percussion</a>. Many of these instruments in the same family may be slightly modified for each instrument (example: First Violin, Second Violin, viola, etc). Every instrument sounds different and has its own unique sound to it. Only the most common and popular instruments will be mentioned, as there are hundreds of instruments in the world. </p>
+				<img src = "multiple.png" width = "300" height = "290" alt = "Variable Concert Band Musical Instruments" />
 				<h3 class = "list"> WOODWIND </h3>
-					<ul> 
-						<li> <a href = "https://en.wikipedia.org/wiki/Flute"> Flute </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Clarinet"> Clarinet </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Oboe"> Oboe </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Saxophone"> Saxophone </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Bassoon"> Bassoon </a> </li>
-					</ul>
+				<ul> 
+                    <li> <a href = "https://en.wikipedia.org/wiki/Flute"> Flute </a> </li>
+                    <li> <a href = "https://en.wikipedia.org/wiki/Clarinet"> Clarinet </a> </li>
+                    <li> <a href = "https://en.wikipedia.org/wiki/Oboe"> Oboe </a> </li>
+				    <li> <a href = "https://en.wikipedia.org/wiki/Saxophone"> Saxophone </a> </li>
+				    <li> <a href = "https://en.wikipedia.org/wiki/Bassoon"> Bassoon </a> </li>
+				</ul>
 				<h3 class = "list"> STRING </h3>
-					<ul>
-						<li> <a href = "https://en.wikipedia.org/wiki/Violin"> Violin </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Viola"> Viola </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Guitar"> Guitar </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Cello"> Cello </a> </li> 
-						<li> <a href = "https://en.wikipedia.org/wiki/Double_bass"> Double Bass </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Ukulele"> Ukulele </a> </li>
-					</ul>
+				<ul>
+					<li> <a href = "https://en.wikipedia.org/wiki/Violin"> Violin </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Viola"> Viola </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Guitar"> Guitar </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Cello"> Cello </a> </li> 
+					<li> <a href = "https://en.wikipedia.org/wiki/Double_bass"> Double Bass </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Ukulele"> Ukulele </a> </li>
+				</ul>
 				<h3 class = "list"> BRASS </h3>
-					<ul> 
-						<li> <a href = "https://en.wikipedia.org/wiki/Trumpet"> Trumpet </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Trombone"> Trombone </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/French_horn"> French Horn </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Baritone_horn"> Baritone </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Tuba"> Tuba </a> </li>
-					</ul>
+				<ul> 
+					<li> <a href = "https://en.wikipedia.org/wiki/Trumpet"> Trumpet </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Trombone"> Trombone </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/French_horn"> French Horn </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Baritone_horn"> Baritone </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Tuba"> Tuba </a> </li>
+				</ul>
 				<h3 class = "list"> PERCUSSION </h3>
-					<ul>
-						<li> <a href = "https://en.wikipedia.org/wiki/Piano"> Piano </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Snare_drum"> Snare Drum </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Bass_drum"> Bass Drum </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Xylophone"> Xylophone / Bells </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Crash_cymbal"> Suspended Cymbals & Crash Cymbals </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Tambourine"> Tambourine </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Triangle_(musical_instrument)"> Triangle </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Claves"> Clave </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Wood_block"> Wood block </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Bongo_drum"> Bongos </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Timpani"> Timpani </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Wind_chime"> Chimes </a> </li>
-						<li> <a href = "https://en.wikipedia.org/wiki/Maraca"> Maracas </a> </li>
-					</ul>
-					<!-- I added several Wikipedia links, just in case the reader was interested about one specific musical instrument, and they wanted to find out more information about this instrument, directed right from my website. -->
+				<ul>
+					<li> <a href = "https://en.wikipedia.org/wiki/Piano"> Piano </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Snare_drum"> Snare Drum </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Bass_drum"> Bass Drum </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Xylophone"> Xylophone / Bells </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Crash_cymbal"> Suspended Cymbals & Crash Cymbals </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Tambourine"> Tambourine </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Triangle_(musical_instrument)"> Triangle </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Claves"> Clave </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Wood_block"> Wood block </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Bongo_drum"> Bongos </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Timpani"> Timpani </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Wind_chime"> Chimes </a> </li>
+					<li> <a href = "https://en.wikipedia.org/wiki/Maraca"> Maracas </a> </li>
+				</ul>
+				<!-- I added several Wikipedia links, just in case the reader was interested about one specific musical instrument, and they wanted to find out more information about this instrument, directed right from my website. -->
 			<h2 id = "Why_Do_People_Enjoy_Playing_Musical_Instruments?"> Why Do People Enjoy Playing Musical Instruments? </h2>
 				<h3> RELAXATION </h3>
-					<p> If you're question how relaxation can be a big part of musical instruments, you&rsquo;ll soon know how. To alter a person&rsquo;s mood, people may enjoy playing musical instruments as a form of relaxation, to either amuse themselves or others. Why, must you ask? The relaxing, soothing sound of an instrument may bring happiness to your ears, reducing levels of <a href = "https://en.wikipedia.org/wiki/Pain"> pain</a>, <a href = "https://en.wikipedia.org/wiki/Anxiety"> anxiety</a>, <a href = "https://en.wikipedia.org/wiki/Psychological_stress"> stress</a> or <a href = "https://en.wikipedia.org/wiki/Anger"> anger</a>. The sound of a nice violin is just so soothing, with very gently-played gentle chords and notes. Who doesn&rsquo;t love the sound of music to wind down their day and talk about happiness? </p>
+					<p> If you're question how relaxation can be a big part of musical instruments, you&rsquo;ll soon know how. To alter a person&rsquo;s mood, people may enjoy playing musical instruments as a form of relaxation, to either amuse themselves or others. Why, must you ask? The relaxing, soothing sound of an instrument may bring happiness to your ears, reducing levels of <a href = "https://en.wikipedia.org/wiki/Pain"> pain</a>, <a href = "https://en.wikipedia.org/wiki/Anxiety"> anxiety</a>, <a href = "https://en.wikipedia.org/wiki/Psychological_stress"> stress</a> or <a href = "https://en.wikipedia.org/wiki/Anger"> anger</a>. The sound of a nice violin is just so soothing, with very gently played gentle chords and notes. Who doesn&rsquo;t love the sound of music to wind down their day and talk about happiness? </p>
 				<h3> ENTERTAINMENT </h3> 
 					<p> People may entertain other individuals to give them satisfaction, to just hear them play may brighten up their day. The entertainment industry is open for a wide range of musicians, for the ones who want to play music to please others. The world needs more creative and amazing musicians. Musical instruments are also a great way to express how you are feeling, as there are many different genres of music in the world, and they all possess different feelings and emotions that an individual may perform on an instrument. Sometimes, when you&rsquo;re at your lowest, music can cheer you up. It motivates you to push through it and keep on going. </p>
 				<h3> KNOWLEDGE </h3>
-                    <p> Several studies all around the world have proven that music instrument knowledge improves your academic skills. It develops self-discipline and a positive mindset to the person partaking in music studies. Focusing on a musical instrument as an extra-curricular activity can open a door to so many new oppurtunities. If you are a parent looking into getting your child into musical studies, definitely go for it. It is such a fun experience to learn a whole new academic concept apart from schoolwork. If you are a student in music, you can perhaps join a music ensemble in or outside of school, play at your school talent show, can lead to a career, and may even focus your post-secondary education in this industry. Knowledge in music can develop your brain to its fullest potential, learning elements in your life that you&rsquo;ve never known before. </p>
+                    <p> Several studies all around the world have proven that music instrument knowledge improves your academic skills. It develops self-discipline and a positive mindset to the person partaking in music studies. Focusing on a musical instrument as an extra-curricular activity can open a door to so many new opportunities. If you are a parent looking into getting your child into musical studies, definitely go for it. It is such a fun experience to learn a whole new academic concept apart from schoolwork. If you are a student in music, you can perhaps join a music ensemble in or outside of school, play at your school talent show, can lead to a career, and may even focus your <a href = "https://en.wikipedia.org/wiki/Higher_education"> post-secondary education</a> in this industry. Knowledge in music can develop your brain to its fullest potential, learning elements in your life that you&rsquo;ve never known before. </p>
 			<h2 id = "Conclusion"> Conclusion </h2>
-				<p> Musical instruments have had a big impact on the world today, as many people enjoy these products as forms of satisfaction. Not only do people love musical instruments, but they adore all the different uses people make out of them. Musical instruments are highly beneficial in so many countless ways. The amount of ways people use these instruments to please others; is just outstanding. </p>
-            <img class = "image" src = "trebleclef.png" width = "115" height = "207" alt = "Picture Of Musical Notes" />
+				<p> Musical instruments have had a big impact on the world today, as many people enjoy these products as forms of satisfaction. Furthermore, people may also choose to pursue music <a href = "2index.html"> as a career</a>. Not only do people love musical instruments, but also they adore all the different uses people make out of them. Musical instruments are highly beneficial in so many countless ways. The amount of ways people use these instruments to please others; is just outstanding. </p>
+            <img class = "image" src = "trebleclef.png" width = "115" height = "207" alt = "Picture Of A Treble Clef" />
 			<p class = "return"> <a href = "#Top"> RETURN TO TOP</a> </p>
             <a href="http://validator.w3.org/check?uri=https://liacosd.github.io/home/ "> <img class = "image" src = "html5.jpg" width = "165" height = "64" alt = "HTML5 Icon with CSS3 and Semantics" /> </a>
-	</body>            
+	</body>
 </html>
