--- a/2index.html
+++ b/2index.html
@@ -6,15 +6,15 @@
 		<meta charset = "UTF-8">
 	</head>
 	<body>
-		<h1> CAREERS IN MUSIC <h1>
-            <img class = "career" src = "career.jpg" width: "475" height = "290" alt = "Google Sites Image of Different Opportunities for Pursuing A Career In Music, Scattered" />
+        <h1> CAREERS IN MUSIC </h1>
+            <img class = "career" src = "career.jpg" width = "475" height = "290" alt = "Google Sites Image of Different Opportunities for Pursuing A Career In Music, Scattered" />
 			<h2> Introduction </h2> 
 				<p> As many of you already know, millions of people play musical instruments all around the world, and many of them pursue careers in that category. There are several options available for pursing a career in music, one of the biggest would be a music teacher. Whether that is conducting an orchestra or teaching a specific instrument, all of these jobs involve music knowledge. </p> 
             <h2> The Different Opportunities </h2>
                 <p> The different opportunities and choices you have in pursing music as a career are endless; from teaching a specific instrument to performing in a musical ensemble. Everyone just thinks that music is just hitting a key on a piano, but no; it&rsquo;s SO much more than that. </p>
                 <h3> AS A TEACHER </h3>
                     <h4> Teaching A Specific Instrument </h4>
-                        <p> Teaching a specific instrument to a student, friend, or family member is one of the most popular careers in the music industry. You may have students on a weekly basis have you as a teacher, for example; piano lessons. They will come back every week afer practicing their assigned music pieces, and will gradually get better as they go along. </p>
+                        <p> Teaching a specific instrument to a student, friend, or family member is one of the most popular careers in the music industry. You may have students on a weekly basis have you as a teacher; for example, like piano lessons. They will come back every week after practicing their assigned music pieces, and will gradually get better as they go along. </p>
                     <h4> Working with a Music Ensemble </h4>
                         <p> There are several different musical ensembles to work with, if you may want to become the manager or conductor of a band, then knowing all the different types of musical ensembles is crucial to be aware of the different instruments you will have to work with. Here are some examples of a few: </p>
                         <ul>
