--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
                     			<p> Several studies all around the world have proven that music instrument knowledge improves your academic skills. It develops self-discipline and a positive mindset to the person partaking in music studies. Focusing on a musical instrument as an extra-curricular activity can open a door to so many new opportunities. If you are a parent looking into getting your child into musical studies, definitely go for it. It is such a fun experience to learn a whole new academic concept apart from schoolwork. If you are a student in music, you can perhaps join a music ensemble in or outside of school, play at your school talent show, can lead to a career, and may even focus your <a href = "https://en.wikipedia.org/wiki/Higher_education"> post-secondary education</a> in this industry. Knowledge in music can develop your brain to its fullest potential, learning elements in your life that you&rsquo;ve never known before. </p>
 			<h2 id = "Conclusion"> Conclusion </h2>
 				<p> Musical instruments have had a big impact on the world today, as many people enjoy these products as forms of satisfaction. Furthermore, people may also choose to pursue music <a href = "2index.html"> as a career</a>. Not only do people love musical instruments, but also they adore all the different uses people make out of them. Musical instruments are highly beneficial in so many countless ways. The amount of ways people use these instruments to please others; is just outstanding. </p>
-            <img class = "image" src = "trebleclef.png" width = "115" height = "207" alt = "Picture Of A Treble Clef" />
+		<img class = "image" src = "trebleclef.png" width = "115" height = "207" alt = "Picture Of A Treble Clef" />
 			<p class = "return"> <a href = "#Top"> RETURN TO TOP</a> </p>
-            <a href="http://validator.w3.org/check?uri=https://liacosd.github.io/home/ "> <img class = "image" src = "html5.jpg" width = "165" height = "64" alt = "HTML5 Icon with CSS3 and Semantics" /> </a>
+            	<a href="http://validator.w3.org/check?uri=https://liacosd.github.io/home/ "> <img class = "image" src = "html5.jpg" width = "165" height = "64" alt = "HTML5 Icon with CSS3 and Semantics" /> </a>
+		<p> <cite> All Information Is Original and All Images are Either By Daniel Liacos or from Google Images </cite> </p>
 	</body>
 </html>
