--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1> MUSICAL INSTRUMENTS </h1>
-			<img id = "#images" src = "FullSizeRender.jpg" width = "1250" height = "170" alt = "Clip Art of Different Little Drawings of Instruments" />
+			<img class = "images" src = "FullSizeRender.jpg" width = "1250" height = "170" alt = "Clip Art of Different Little Drawings of Instruments" />
 			<p class = "center"> <a href = "#Introduction"> Introduction</a> </p>
 			<p class = "center"> <a href = "#Different_Types_Of_Instrument_Families"> Different Types Of Instrument Families</a> </p>
 			<p class = "center"> <a href = "#Why_Do_People_Enjoy_Playing_Musical_Instruments?"> Why Do People Enjoy Playing Musical Instruments?</a> </p>
@@ -72,6 +72,6 @@
 		<img class = "image" src = "trebleclef.png" width = "115" height = "207" alt = "Picture Of A Treble Clef" />
 			<p class = "return"> <a href = "#Top"> RETURN TO TOP</a> </p>
             	<a href="http://validator.w3.org/check?uri=https://liacosd.github.io/home/ "> <img class = "image" src = "html5.jpg" width = "165" height = "64" alt = "HTML5 Icon with CSS3 and Semantics" /> </a>
-		<p> <cite> All Information Is Original and All Images are Either By Daniel Liacos or from Google Images </cite> </p>
+		<p> <cite> All content is original and and all images are either from Google Images or </cite> Daniel Liacos </p>
 	</body>
 </html>
