--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<p> Musical instruments have had a big impact on the world today, as many people enjoy these products as forms of satisfaction. Furthermore, people may also choose to pursue music <a href = "2index.html"> as a career</a>. Not only do people love musical instruments, but also they adore all the different uses people make out of them. Musical instruments are highly beneficial in so many countless ways. The amount of ways people use these instruments to please others; is just outstanding. </p>
 		<img class = "image" src = "trebleclef.png" width = "115" height = "207" alt = "Picture Of A Treble Clef" />
 			<p class = "return"> <a href = "#Top"> RETURN TO TOP</a> </p>
-            	<a href="http://validator.w3.org/check?uri=https://liacosd.github.io/home/ "> <img class = "image" src = "html5.jpg" width = "165" height = "64" alt = "HTML5 Icon with CSS3 and Semantics" /> </a>
-		<p> <cite> All content is original and and all images are either from Google Images or </cite> Daniel Liacos </p>
+            	<a href="http://validator.w3.org/check?uri=https://liacosd.github.io/home/"> <img class = "image" src = "html5.jpg" width = "165" height = "64" alt = "HTML5 Icon with CSS3 and Semantics" /> </a>
+		<p> <cite> All content is original, and all images are either from Google Images or </cite> Daniel Liacos </p>
 	</body>
 </html>
