--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1> MUSICAL INSTRUMENTS </h1>
-			<img class = "image" src = "FullSizeRender.jpg" width = "1250" height = "170" alt = "Clip Art of Different Little Drawings of Instruments" />
+			<img class = "images" src = "FullSizeRender.jpg" width = "1250" height = "170" alt = "Clip Art of Different Little Drawings of Instruments" />
 			<p class = "center"> <a href = "#Introduction"> Introduction</a> </p>
 			<p class = "center"> <a href = "#Different_Types_Of_Instrument_Families"> Different Types Of Instrument Families</a> </p>
 			<p class = "center"> <a href = "#Why_Do_People_Enjoy_Playing_Musical_Instruments?"> Why Do People Enjoy Playing Musical Instruments?</a> </p>
